fix: euler image

--- a/internal-server/Dockerfile
+++ b/internal-server/Dockerfile
@@ -1,8 +1,14 @@
 FROM openeuler/openeuler:23.03 as BUILDER
-RUN dnf update -y && \
+RUN sed -i "s|repo.openeuler.org|mirrors.pku.edu.cn/openeuler|g" /etc/yum.repos.d/openEuler.repo && \ 
+    dnf update -y && \
     dnf install -y golang && \
     go env -w GOPROXY=https://goproxy.cn,direct
 
+ARG USER
+ARG PASS
+RUN echo "machine github.com login $USER password $PASS" > /root/.netrc
+
+RUN go env -w GOPRIVATE=github.com/opensourceways/xihe-extra-services,github.com/opensourceways/xihe-server,github.com/opensourceways/xihe-training-center,github.com/opensourceways/xihe-aicc-finetune,github.com/opensourceways/xihe-finetune,github.com/opensourceways/xihe-sync-repo
 
 # build binary
 COPY . /go/src/github.com/opensourceways/xihe-extra-services
@@ -10,7 +16,8 @@ RUN cd /go/src/github.com/opensourceways/xihe-extra-services/internal-server && 
 
 # copy binary config and utils
 FROM openeuler/openeuler:22.03
-RUN dnf -y update && \
+RUN sed -i "s|repo.openeuler.org|mirrors.pku.edu.cn/openeuler|g" /etc/yum.repos.d/openEuler.repo && \ 
+    dnf -y update && \
     dnf in -y shadow && \
     groupadd -g 5000 mindspore && \
     useradd -u 5000 -g mindspore -s /bin/bash -m mindspore
