--- a/async-server/Dockerfile
+++ b/async-server/Dockerfile
@@ -1,5 +1,6 @@
 FROM openeuler/openeuler:23.03 as BUILDER
-RUN dnf update -y && \
+RUN sed -i "s|repo.openeuler.org|mirrors.pku.edu.cn/openeuler|g" /etc/yum.repos.d/openEuler.repo && \ 
+    dnf update -y && \
     dnf install -y golang && \
     go env -w GOPROXY=https://goproxy.cn,direct
 
@@ -10,7 +11,8 @@ RUN cd /go/src/github.com/opensourceways/xihe-extra-services/async-server && GO1
 
 # copy binary config and utils
 FROM openeuler/openeuler:22.03
-RUN dnf -y update && \
+RUN sed -i "s|repo.openeuler.org|mirrors.pku.edu.cn/openeuler|g" /etc/yum.repos.d/openEuler.repo && \ 
+    dnf -y update && \
     dnf in -y shadow && \
     groupadd -g 5000 mindspore && \
     useradd -u 5000 -g mindspore -s /bin/bash -m mindspore
