Support to Choose Multiple Versions of Jupyter Images (#16)
* feat(cloud): support users to choose image which they need

* ci: fix syntx error of ci configuration

* build(cloud): update package dependencies

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,12 @@ jobs:
     
     - name: cleanup
       run: rm -f ~/.netrc
+       
+    - name: Set Login Credentials
+      env:
+        TOKEN: ${{ secrets.ZYK_PERSONAL_TOKEN }}
+        USER: ${{ secrets.ZYK_USER_NAME }}
+      run: echo "machine github.com login $USER password $TOKEN" > ~/.netrc
 
     - name: Run Gosec Security Scanner
       uses: securego/gosec@master
@@ -32,10 +38,6 @@ jobs:
 
     - name: golangci-lint
       uses: golangci/golangci-lint-action@master
-      env:
-        TOKEN: ${{ secrets.ZYK_PERSONAL_TOKEN }}
-        USER: ${{ secrets.ZYK_USER_NAME }}
-      run: echo "machine github.com login $USER password $TOKEN" > ~/.netrc
       with:
         # Require: The version of golangci-lint to use.
         # When `install-mode` is `binary` (default) the value can be v1.2 or v1.2.3 or `latest` to use the latest version.
