--- a/message-server/Dockerfile
+++ b/message-server/Dockerfile
@@ -6,7 +6,7 @@ RUN dnf update -y && \
 ARG USER
 ARG PASS
 RUN echo "machine github.com login $USER password $PASS" > /root/.netrc
-RUN go env -w GOPRIVATE=github.com/opensourceways/xihe-extra-services,github.com/opensourceways/xihe-server,github.com/opensourceways/xihe-training-center,github.com/opensourceways/xihe-aicc-finetune,github.com/opensourceways/xihe-finetune,github.com/opensourceways/xihe-sync-repo
+RUN go env -w GOPRIVATE=github.com/opensourceways
 
 # build binary
 COPY . /go/src/github.com/opensourceways/xihe-extra-services
